nearest/tests/compile-fail/ref_cross_session.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/compile-fail/ref_cross_session.rs:19:15
   |
16 |     let r = s1.root();
   |         - `r` declared here, outside of the closure body
17 |     region2.session(|s2| {
   |                      -- `s2` is a reference that is only valid in the closure body
18 |       // Use a Ref from s1 inside s2 — must not compile.
19 |       let _ = s2.at(r);
   |               ^^^^^^^^ `s2` escapes the closure body here
   |
   = note: requirement occurs because of the type `nearest::Ref<'_, Block>`, which makes the generic argument `'_` invariant
   = note: the struct `nearest::Ref<'id, T>` is invariant over the parameter `'id`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0521]: borrowed data escapes outside of closure
  --> tests/compile-fail/ref_cross_session.rs:19:15
   |
15 |   region.session(|s1| {
   |                   --
   |                   |
   |                   `s1` is a reference that is only valid in the closure body
   |                   has type `&mut Session<'1, '_, Block>`
...
19 |       let _ = s2.at(r);
   |               ^^^^^^^^
   |               |
   |               `s1` escapes the closure body here
   |               argument requires that `'1` must outlive `'static`
